[gd_scene load_steps=10 format=3 uid="uid://c0pkpig4a12tv"]

[ext_resource type="Script" uid="uid://c2h85yrvonkyg" path="res://scripts/ui/title_screen.gd" id="2_t0v0j"]
[ext_resource type="Theme" uid="uid://b0ahbsqigdcpj" path="res://assets/themes/menu.tres" id="2_w8uqo"]

[sub_resource type="Theme" id="Theme_aw7pl"]
HeaderLarge/base_type = &"Label"
HeaderLarge/font_sizes/font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aw7pl"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aw7pl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8f6ox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqml5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.254902, 0.254902, 0.254902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo8uf"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.254902, 0.254902, 0.254902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4lrb"]
content_margin_left = 40.0
content_margin_top = 15.0
content_margin_right = 40.0
content_margin_bottom = 15.0
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TitleScreen" type="PanelContainer"]
offset_right = 1920.0
offset_bottom = 917.0
size_flags_vertical = 3
theme = SubResource("Theme_aw7pl")
theme_override_styles/panel = SubResource("StyleBoxFlat_aw7pl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 150

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_w8uqo")
script = ExtResource("2_t0v0j")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_w8uqo")
theme_override_constants/separation = 20

[node name="Duty Desk" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_w8uqo")
text = "Duty Desk"
alignment = 0

[node name="Multiplayer" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_aw7pl")
text = "Multiplayer"
alignment = 0

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_8f6ox")
text = "Settings"
alignment = 0

[node name="Stats" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_8f6ox")
text = "Stats"
alignment = 0

[node name="Help" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_8f6ox")
text = "Help"
alignment = 0

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 500)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_w8uqo")
theme_override_styles/panel = SubResource("StyleBoxFlat_bqml5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PlayerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerName" type="Label" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "John Doe"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SpecialisationLevel" type="Label" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Certified TRACON Controller"

[node name="FacilityLevel" type="Label" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Facility Level 9"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bo8uf")

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Ratings" type="Button" parent="MarginContainer/HBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_s4lrb")
text = "Ratings"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Duty Desk" to="MarginContainer/HBoxContainer" method="_on_duty_desk_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Multiplayer" to="MarginContainer/HBoxContainer" method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Settings" to="MarginContainer/HBoxContainer" method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Stats" to="MarginContainer/HBoxContainer" method="_on_stats_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Help" to="MarginContainer/HBoxContainer" method="_on_help_pressed"]
